correct color codes and spacing

--- a/src/components/BookItem/BookItem.css
+++ b/src/components/BookItem/BookItem.css
@@ -119,7 +119,7 @@ ul {
 }
 
 .bookFooter_button {
-  background-color: #0290FF;
+  background-color: #0290ff;
   color: white;
   padding: 7px 30px;
   border-radius: 5px;
