--- a/src/components/FormAdd/FormAdd.css
+++ b/src/components/FormAdd/FormAdd.css
@@ -29,7 +29,7 @@
   width: 15%;
   padding: 7px 0;
   font-weight: 700;
-  background-color: #0290FF;
+  background-color: #0290ff;
   color: white;
   border-radius: 5px;
 }
