--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,7 +13,7 @@
 }
 
 h1 {
-  color:  #0290FF;
+  color: #0290ff;
 }
 
 .books,
@@ -30,7 +30,7 @@ h1 {
 }
 
 .headIco {
-  color:  #0290FF;
+  color: #0290ff;
   padding: 0.85rem;
   font-size: 20px;
 }
